Fixed text overflow bug

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -94,7 +94,7 @@ button {
 
 .row {
   align-items: center;
-  white-space: nowrap;
+  white-space: wrap;
   color: black;
   /* pointer-events: none; */
 }
